fix: corrige exception mapper e aplicação quarkus funcionando